index image fixes animation info text fonts and construccion page

--- a/html-tienda-items/enconstruccionpage.html
+++ b/html-tienda-items/enconstruccionpage.html
@@ -53,3 +53,14 @@
 
 
 </head>
+
+<body>
+  <section class="mensajecons flex-center">
+    <div class="enconstruccion flex center">
+      LO SIENTO, ESTAMOS EN CONTRUCCIÓN
+    </div>
+    <div>
+      <a href="../index.html">Regresar al Inicio</a>
+    </div>
+  </section>
+</body>
