--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             </h1>
 
-            <nav class="exteriornav navbar navbar-expand-lg bg-light">
+            <nav class="exteriornav navbar navbar-expand-lg bg-light animate__animated animate__flash">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html">Inicio</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -108,21 +108,20 @@
 
     </section>
 
-    <section class="flex-center">
+    <section class="flex-center animate__animated animate__slideInUp">
 
 
         <div id="fondoindex" class="flex-center">
 
-            <h2>ILLUSTRATION</h2>
+            <h2 class="illus animate__animated animate__slideInLeft animate__delay-3s">ILLUS</h2>
+            <h2 class="tration animate__animated animate__slideInRight animate__delay-5s">TRATION</h2>
 
         </div>
 
     </section>
 
 
-    <!--<img src="pictures/imgindex2.png" class="w-100 animate__animated animate__zoomIn"
-                alt="imagen cover index collage mujeres caminando" />
--->
+
 
 
     <section>
