--- a/info.html
+++ b/info.html
@@ -125,7 +125,7 @@
 
         <div class="containerfoto">
             <img src="pictures/infoimg.jpeg" class="img-fluid w-30" alt="Foto de perfil Marie Obando">
-           
+
         </div>
 
         <div class="infotext animate__animated animate__zoomIn">
@@ -157,56 +157,100 @@
     </section>
 
     <section class="statement">
-        <div>
-
-            <h2>ABOUT CONCEPTOS E IDEAS</h2>
-
-            <p>
 
 
-                Leo, escucho música, busco imágenes específicas, recolecto papeles, posters, fotografías; así empiezo a
-                dar cuerpo al conjunto de emociones, pensamientos e imágenes inundan mi mente en un momento determinado
+        <h2>ACERCA DE LOS CONCEPTOS E IDEAS</h2>
+
+
+
+        <div id="statementtext">
+            <div>
+
+
+
+
+                Leo, escucho música, busco imágenes específicas, recolecto papeles, posters, fotografías;
+                así
+                empiezo a
+                dar cuerpo al conjunto de emociones, pensamientos e imágenes inundan mi mente en un momento
+                determinado
                 inspiradas en dicha esta recolección y búsqueda personal.
-                Al realizar una pieza, esto puede implicar a veces una diferenciación en el cuerpo de obras. El collage
-                se ha hecho presente en mi trabajo desde hace años, pienso que me permite expresar de manera más cercana
-                y fiel las imágenes que proyecto internamente, la complejidad y la extrañeza del uno mismo y lo otro, e
-                igualmente la conexión que subyace para mí en toda la experiencia particular de vida desde mi feminidad
+                Al realizar una pieza, esto puede implicar a veces una diferenciación en el cuerpo de obras.
+                El
+                collage
+                se ha hecho presente en mi trabajo desde hace años, pienso que me permite expresar de manera
+                más
+                cercana
+                y fiel las imágenes que proyecto internamente, la complejidad y la extrañeza del uno mismo y
+                lo
+                otro, e
+                igualmente la conexión que subyace para mí en toda la experiencia particular de vida desde
+                mi
+                feminidad
                 y humanidad. El dibujo también
-                ha pedido poco a poco mayor espacio e interactúa con el collage, lo complementa, lo completa, se opone a
+                ha pedido poco a poco mayor espacio e interactúa con el collage, lo complementa, lo
+                completa, se
+                opone a
                 él.
 
 
-            </p>
 
 
-            <p>
 
-                Como mujer, siempre tuve la sensación de tener que realizar ciertos rituales, pasajes y tareas
-                específicas para proyectar una imagen ya escrita en un gran guión, un gran acuerdo social... ¿ Cómo
+            </div>
+            <div>
+
+
+                Como mujer, siempre tuve la sensación de tener que realizar ciertos rituales, pasajes y
+                tareas
+                específicas para proyectar una imagen ya escrita en un gran guión, un gran acuerdo social...
+                ¿ Cómo
                 es ser niña y cómo podía ser mujer?... Y cómo debe ser el pasaje entre esta y aquella.
-                Cuando solo me preguntaba por Ser y lo que implicaba para mí esto me sentí increpada, avergonzada y
-                asustada de sentirme distinta a lo que se esperaba de mí. Es así como pienso en los diversos rituales y
-                ceremonias que cada sociedad y cada cultura en particular construye respecto a la identidad de las
-                mujeres, como una cárcel. Y es que no hay una sola forma de ser mujer ni hay un número limitado de roles
+                Cuando solo me preguntaba por Ser y lo que implicaba para mí esto me sentí increpada,
+                avergonzada y
+                asustada de sentirme distinta a lo que se esperaba de mí. Es así como pienso en los diversos
+                rituales y
+                ceremonias que cada sociedad y cada cultura en particular construye respecto a la identidad
+                de las
+                mujeres, como una cárcel. Y es que no hay una sola forma de ser mujer ni hay un número
+                limitado de roles
                 que debamos cumplir, no hay formularios que llenar.
 
-            </p>
 
-            <p>
+            </div>
+
+
+            <div>
+
+
 
                 Ante la mirada de un sistema sexista, que controla nuestros deseos, nuestros
-                cuerpos y la forma en que deberíamos expresarnos, no puedo sino levantar mi mano y crear, mi muy
+                cuerpos y la forma en que deberíamos expresarnos, no puedo sino levantar mi mano y crear, mi
+                muy
                 personal
                 fuck you. Mi trabajo intenta expresar la indignación de sentirme atrapada por todos estos
-                parámetros sexistas que solo socavaron mi confianza y me dijeron que era menos. No, nunca fui
+                parámetros sexistas que solo socavaron mi confianza y me dijeron que era menos. No, nunca
+                fui
                 menos mujer, fui yo, me construí y aprendí a leer que todo lo que intenté ser lo
-                construyeron para mí quienes nunca me conocieron, y sin embargo, siempre estuvieron presentes
+                construyeron para mí quienes nunca me conocieron, y sin embargo, siempre estuvieron
+                presentes
                 controlando nuestra identidad…
 
 
-            </p>
+
+
+
+            </div>
 
         </div>
+
+
+
+
+
+
+
+
     </section>
 
     <section>
