img nuevas arreglo web en contruccion bg texto en info

--- a/html-tienda-items/enconstruccionpage.html
+++ b/html-tienda-items/enconstruccionpage.html
@@ -6,11 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="description" content="Entra en la tienda y chequea los prints y originales de arte e ilustraciones collage, la pintura.">
+  <meta name="description"
+    content="Entra en la tienda y chequea los prints y originales de arte e ilustraciones collage, la pintura.">
 
   <!-- META KEYWORDS 18 PALABRAS -->
 
-  <meta name="keywords" content="arte, Argentina, Venezuela, ilustraciones, Tienda, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, compra, pagos, obras">
+  <meta name="keywords"
+    content="arte, Argentina, Venezuela, ilustraciones, Tienda, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, compra, pagos, obras">
 
 
   <!-- PROTOCOLO OPEN GRAPH -->
@@ -55,12 +57,12 @@
 </head>
 
 <body>
-  <section class="mensajecons flex-center">
-    <div class="enconstruccion flex center">
-      LO SIENTO, ESTAMOS EN CONTRUCCIÓN
-    </div>
-    <div>
+
+  <div class="mensajecons" style="background-image: url('../pictures/imgconstrucc.JPG');">
+
+    <div class="color-overlay d-flex flex-column justify-content-center align-items-center">
+      <h1 class="enconstruccion">LO SIENTO, ESTAMOS EN CONTRUCCIÓN.</h1>
       <a href="../index.html">Regresar al Inicio</a>
     </div>
-  </section>
+
 </body>
