--- a/info.html
+++ b/info.html
@@ -163,8 +163,8 @@
 
 
 
-        <div id="statementtext">
-            <div>
+        <div id="statementtext" style="background-image: url(./pictures/imgstatement.png); ">
+            <div class="p">
 
 
 
@@ -198,7 +198,7 @@
 
 
             </div>
-            <div>
+            <div class="p">
 
 
                 Como mujer, siempre tuve la sensación de tener que realizar ciertos rituales, pasajes y
@@ -220,7 +220,7 @@
             </div>
 
 
-            <div>
+            <div class="p">
 
 
 
