folder for pages

--- a/pagessection/tienda.html
+++ b/pagessection/tienda.html
@@ -32,7 +32,7 @@
 
 
   <!--Enlace externo css-->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 
   <!--Type del documento-->
 
@@ -54,7 +54,7 @@
 
   <title>Marie Obando | Tienda</title>
 
-  <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
 
 
 </head>
@@ -125,26 +125,26 @@
 
     <div class="tiendawrapimagenes d-flex flex-row justify-content-evenly p-4 container-fluid">
       <div class="card" style="width: 18rem;">
-        <img src="pictures/img1.jpg" class="card-img-top" alt="Journey of the Daughters- Print-">
+        <img src="../pictures/img1.jpg" class="card-img-top" alt="Journey of the Daughters- Print-">
         <div class="card-body d-flex align-items-end">
           <h5 class="card-title">Journey of the Daughters -Print- $1800 ARS</h5>
-          <a href="html-tienda-items/compra1.html" class="btn btn-danger">Detalles</a>
+          <a href="../html-tienda-items/compra1.html" class="btn btn-danger">Detalles</a>
         </div>
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="pictures/img13.jpg" class="card-img-top" alt="Hotel San Francisco-Print-">
+        <img src="../pictures/img13.jpg" class="card-img-top" alt="Hotel San Francisco-Print-">
         <div class="card-body d-flex align-items-end">
           <h5 class="card-title"> Hotel San Francisco -Print- $1600 ARS</h5>
-          <a href="html-tienda-items/compra2.html" class="btn btn-danger">Detalles</a>
+          <a href="../html-tienda-items/compra2.html" class="btn btn-danger">Detalles</a>
         </div>
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="pictures/img12.jpg" class="card-img-top" alt="Casa de Hacienda-Print-">
+        <img src="../pictures/img12.jpg" class="card-img-top" alt="Casa de Hacienda-Print-">
         <div class="card-body d-flex align-items-end">
           <h5 class="card-title">Casa de Hacienda -Print- $1600 ARS</h5>
-          <a href="html-tienda-items/compra3.html" class="btn btn-danger">Detalles</a>
+          <a href="../html-tienda-items/compra3.html" class="btn btn-danger">Detalles</a>
         </div>
       </div>
 
@@ -154,26 +154,26 @@
 
       <div class="card" style="width: 18rem;">
 
-        <img src="pictures/img3.jpg" class="card-img-top" alt="Virus-Print-">
+        <img src="../pictures/img3.jpg" class="card-img-top" alt="Virus-Print-">
         <div class="card-body d-flex align-items-end">
           <h5 class="card-title">Virus -Print- $1800 ARS</h5>
-          <a href="html-tienda-items/compra4.html" class="btn btn-danger">Detalles</a>
+          <a href="../html-tienda-items/compra4.html" class="btn btn-danger">Detalles</a>
         </div>
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="pictures/img4.jpg" class="card-img-top" alt="Hell is here-Print-">
+        <img src="../pictures/img4.jpg" class="card-img-top" alt="Hell is here-Print-">
         <div class="card-body d-flex align-items-end">
           <h5 class="card-title">Hell is here -Print- $1800 ARS</h5>
-          <a href="html-tienda-items/compra5.html" class="btn btn-danger">Detalles</a>
+          <a href="../html-tienda-items/compra5.html" class="btn btn-danger">Detalles</a>
         </div>
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="pictures/img11.jpg" class="card-img-top" alt="Factory-Print-">
+        <img src="../pictures/img11.jpg" class="card-img-top" alt="Factory-Print-">
         <div class="card-body d-flex align-items-end">
           <h5 class="card-title">Factory -Print- $1800 ARS</h5>
-          <a href="html-tienda-items/compra6.html" class="btn btn-danger">Detalles</a>
+          <a href="../html-tienda-items/compra6.html" class="btn btn-danger">Detalles</a>
         </div>
       </div>
 
@@ -219,7 +219,7 @@
         <div class="col">
 
           <a href="https://www.instagram.com/mariem_odoardi/" target="_blank">
-            <img src="icons/instaicon.png" class="img-fluid" alt="instaiconlogo">
+            <img src="../icons/instaicon.png" class="img-fluid" alt="instaiconlogo">
 
           </a>
 
@@ -228,7 +228,7 @@
 
 
           <a href="https://www.facebook.com/MariemObando" target="_blank">
-            <img src="icons/facebookicon.png" class="img-fluid" alt="facebookicon">
+            <img src="../icons/facebookicon.png" class="img-fluid" alt="facebookicon">
           </a>
 
 
@@ -238,7 +238,7 @@
 
 
           <a href="https://www.artstation.com/marielinaobando/profile" target="_blank">
-            <img src="icons/artsicon.png" class="img-fluid" alt="artstationicon">
+            <img src="../icons/artsicon.png" class="img-fluid" alt="artstationicon">
           </a>
 
         </div>
