--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="info.html">Info</a>
+                                <a class="nav-link active" aria-current="page" href="./pagessection/info.html">Info</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="proyectos.html">Proyectos</a>
+                                <a class="nav-link" href="./pagessection/proyectos.html">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="tienda.html">Tienda</a>
+                                <a class="nav-link" href="./pagessection/tienda.html">Tienda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contacto.html">Contacto</a>
+                                <a class="nav-link" href="./pagessection/contacto.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
