--- a/item-galeria/obra7.html
+++ b/item-galeria/obra7.html
@@ -66,7 +66,7 @@
                         <ul class="navbar-nav">
 
                             <li class="nav-item">
-                                <a class="nav-link" href="../proyectos.html">Regresar a Galeria</a>
+                                <a class="nav-link" href="../pagessection/proyectos.html">Regresar a Galeria</a>
                             </li>
 
                         </ul>
