--- a/pagessection/contacto.html
+++ b/pagessection/contacto.html
@@ -30,7 +30,7 @@
 
 
     <!--Enlace externo css-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <!--Type del documento-->
 
@@ -52,7 +52,7 @@
 
     <title>Marie Obando | Contactarme</title>
 
-    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
 
 
 </head>
@@ -69,7 +69,7 @@
             <h1 class="animate__animated animate__fadeInRight">
 
 
-                <a href="index.html">MARIE OBANDO</a>
+                <a href="../index.html">MARIE OBANDO</a>
 
 
 
@@ -79,7 +79,7 @@
 
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">Inicio</a>
+                    <a class="navbar-brand" href="../index.html">Inicio</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -87,16 +87,16 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="info.html">Info</a>
+                                <a class="nav-link active" aria-current="page" href="./info.html">Info</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="proyectos.html">Proyectos</a>
+                                <a class="nav-link" href="./proyectos.html">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="tienda.html">Tienda</a>
+                                <a class="nav-link" href="./tienda.html">Tienda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contacto.html">Contacto</a>
+                                <a class="nav-link" href="./contacto.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
@@ -207,7 +207,7 @@
 
                 <li><i class="fas fa-envelope mt-4 fa-2x"></i>
                     <a href="https://www.instagram.com/mariem_odoardi/" target="_blank">
-                        <img src="icons/instaicon.png" class="img-fluid" alt="instaiconlogo">
+                        <img src="../icons/instaicon.png" class="img-fluid" alt="instaiconlogo">
 
                     </a>
                 </li>
@@ -256,7 +256,7 @@
                 <div class="col">
 
                     <a href="https://www.instagram.com/mariem_odoardi/" target="_blank">
-                        <img src="icons/instaicon.png" class="img-fluid" alt="instaiconlogo">
+                        <img src="../icons/instaicon.png" class="img-fluid" alt="instaiconlogo">
 
                     </a>
 
@@ -265,7 +265,7 @@
 
 
                     <a href="https://www.facebook.com/MariemObando" target="_blank">
-                        <img src="icons/facebookicon.png" class="img-fluid" alt="facebookicon">
+                        <img src="../icons/facebookicon.png" class="img-fluid" alt="facebookicon">
                     </a>
 
 
@@ -275,7 +275,7 @@
 
 
                     <a href="https://www.artstation.com/marielinaobando/profile" target="_blank">
-                        <img src="icons/artsicon.png" class="img-fluid" alt="artstationicon">
+                        <img src="../icons/artsicon.png" class="img-fluid" alt="artstationicon">
                     </a>
 
                 </div>
