--- a/pagessection/proyectos.html
+++ b/pagessection/proyectos.html
@@ -34,7 +34,7 @@
 
 
     <!--Enlace externo css-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <!--Type del documento-->
 
@@ -56,7 +56,7 @@
 
     <title>Marie Obando | Proyectos Obra</title>
 
-    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
 
 
 </head>
@@ -73,7 +73,7 @@
             <h1 class="animate__animated animate__fadeInRight">
 
 
-                <a href="index.html">MARIE OBANDO</a>
+                <a href="../index.html">MARIE OBANDO</a>
 
 
 
@@ -81,7 +81,7 @@
 
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">Inicio</a>
+                    <a class="navbar-brand" href="../index.html">Inicio</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -89,16 +89,16 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="info.html">Info</a>
+                                <a class="nav-link active" aria-current="page" href="./info.html">Info</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="proyectos.html">Proyectos</a>
+                                <a class="nav-link" href="./proyectos.html">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="tienda.html">Tienda</a>
+                                <a class="nav-link" href="./tienda.html">Tienda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contacto.html">Contacto</a>
+                                <a class="nav-link" href="./contacto.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
@@ -127,22 +127,22 @@
         <div class="container-fluid animate__animated animate__backInLeft">
             <div class="row">
                 <div class="column">
-                    <a href="item-galeria/obra1.html"><img src="pictures/img4.jpg" /></a>
-                    <a href="item-galeria/obra2.html"><img src="pictures/img5.jpg" /></a>
-                    <a href="item-galeria/obra3.html"><img src="pictures/img7.jpg" /></a>
-                    <a href="item-galeria/obra4.html"><img src="pictures/img6.jpg" /></a>
+                    <a href="../item-galeria/obra1.html"><img src="../pictures/img4.jpg" /></a>
+                    <a href="../item-galeria/obra2.html"><img src="../pictures/img5.jpg" /></a>
+                    <a href="../item-galeria/obra3.html"><img src="../pictures/img7.jpg" /></a>
+                    <a href="../item-galeria/obra4.html"><img src="../pictures/img6.jpg" /></a>
 
                 </div>
                 <div class="column">
-                    <a href="item-galeria/obra5.html"><img src="pictures/img1.jpg"></a>
-                    <a href="item-galeria/obra6.html"><img src="pictures/img3.jpg"></a>
-                    <a href="item-galeria/obra7.html"><img src="pictures/img12.jpg" /></a>
+                    <a href="../item-galeria/obra5.html"><img src="../pictures/img1.jpg"></a>
+                    <a href="../item-galeria/obra6.html"><img src="../pictures/img3.jpg"></a>
+                    <a href="../item-galeria/obra7.html"><img src="../pictures/img12.jpg" /></a>
 
                 </div>
                 <div class="column">
-                    <a href="item-galeria/obra8.html"><img src="pictures/img11.jpg" /></a>
-                    <a href="item-galeria/obra9.html"><img src="pictures/img13.jpg" /></a>
-                    <a href="item-galeria/obra10.html"><img src="pictures/img8.jpg" /></a>
+                    <a href="../item-galeria/obra8.html"><img src="../pictures/img11.jpg" /></a>
+                    <a href="../item-galeria/obra9.html"><img src="../pictures/img13.jpg" /></a>
+                    <a href="../item-galeria/obra10.html"><img src="../pictures/img8.jpg" /></a>
 
                 </div>
             </div>
