info fix index work proyectos links fix

--- a/pagessection/contacto.html
+++ b/pagessection/contacto.html
@@ -118,17 +118,20 @@
 
     </section>
 
-    <section class="bloquecontact m-4">
+    <section class="formulario bloquecontact m-4 p-4 .bg-light.bg-gradient">
 
         <!--Section Header del contacto-->
         <h2 class="h1-responsive font-weight-bold text-center my-4">Hola, Contáctame</h2>
+
         <!--Section descripcion-->
+
         <p class="text-center w-responsive mx-auto mb-5">Hola, ¿Tienes alguna idea? ¿Necesitas ilustraciones para tu
             proyectos creativos?, o simplemente deseas saludar. Déjame tu mensaje por acá</p>
 
 
 
         <!--Grid columna-->
+
         <div class="col-md-12 mb-md-0 mb-5">
             <form id="contact-form" name="contact-form" action="mail.php" method="POST">
 
@@ -186,7 +189,7 @@
             </form>
 
             <div class="enviarbt text-center text-md-left">
-                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Enviar</a>
+                <a class="btn btn-danger" onclick="document.getElementById('contact-form').submit();">Enviar</a>
             </div>
             <div class="status"></div>
         </div>
@@ -198,11 +201,11 @@
 
 
                 <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                    <p class="dataform">+ 11 23916016</p>
+                    <p class="dataform">PUEDES ENVIAR UN MENSAJE A + 11 23916016</p>
                 </li>
 
                 <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                    <p class="dataform">margyobando@hotmail.com</p>
+                    <p class="dataform">ESCRIBE A MI MAIL margyobando@hotmail.com</p>
                 </li>
 
                 <li><i class="fas fa-envelope mt-4 fa-2x"></i>
