--- a/pagessection/proyectos.html
+++ b/pagessection/proyectos.html
@@ -187,7 +187,7 @@
                 <div class="col">
 
                     <a href="https://www.instagram.com/mariem_odoardi/" target="_blank">
-                        <img src="icons/instaicon.png" class="img-fluid" alt="instaiconlogo">
+                        <img src="../icons/instaicon.png" class="img-fluid" alt="instaiconlogo">
 
                     </a>
 
@@ -196,7 +196,7 @@
 
 
                     <a href="https://www.facebook.com/MariemObando" target="_blank">
-                        <img src="icons/facebookicon.png" class="img-fluid" alt="facebookicon">
+                        <img src="../icons/facebookicon.png" class="img-fluid" alt="facebookicon">
                     </a>
 
 
@@ -206,7 +206,7 @@
 
 
                     <a href="https://www.artstation.com/marielinaobando/profile" target="_blank">
-                        <img src="icons/artsicon.png" class="img-fluid" alt="artstationicon">
+                        <img src="../icons/artsicon.png" class="img-fluid" alt="artstationicon">
                     </a>
 
                 </div>
