info video res tienda text fix construccion imag fix

--- a/html-tienda-items/compra2.html
+++ b/html-tienda-items/compra2.html
@@ -119,10 +119,10 @@
 
     <div class="tiendatext animate__animated animate__zoomIn">
       <p>
-        Hotel San Francisco
+        Título- Hotel San Francisco
       </p>
 
-      <p> Dibujo a lápiz sobre papel. Impresión reproducción papel calidad museo.</p>
+      <p> Técnica- Dibujo a lápiz sobre papel. Impresión reproducción papel calidad museo.</p>
 
       <p>
         Tamaño 15 x 15 cm
