--- a/pagessection/contacto.html
+++ b/pagessection/contacto.html
@@ -285,7 +285,7 @@
 
             </div>
 
-            <div class="">
+            <div>
                 <p>Desarrollado por Marie Obando. Todos los derechos reservados. 2022</p>
             </div>
 
