--- a/pagessection/info.html
+++ b/pagessection/info.html
@@ -146,7 +146,7 @@
             </p>
             <p>
                 Fuera de ello tiene un gran interes por los museos, los videojuegos, el género de horror en el cine y el
-                arte generativo producido a traves del creative coding.
+                arte generativo producido a traves del creative coding y A.I..
             </p>
 
 
@@ -159,7 +159,7 @@
     <section class="statement">
 
 
-        <h2>ACERCA DE LOS CONCEPTOS E IDEAS</h2>
+        <h2>Las ideas detrás de mis trabajos</h2>
 
 
 
@@ -169,29 +169,26 @@
 
 
 
-                Leo, escucho música, busco imágenes específicas, recolecto papeles, posters, fotografías;
-                así
-                empiezo a
-                dar cuerpo al conjunto de emociones, pensamientos e imágenes inundan mi mente en un momento
-                determinado
-                inspiradas en dicha esta recolección y búsqueda personal.
-                Al realizar una pieza, esto puede implicar a veces una diferenciación en el cuerpo de obras.
-                El
-                collage
+                Leo, escucho música, busco imágenes específicas, recolecto papeles, posters, fotografías viejas en el
+                mercado;
+                así empiezo a
+                dar cuerpo al conjunto de emociones, pensamientos e imágenes que inundan mi mente en diferentes
+                períodos.
+
+                Cada pieza es única en cuanto al origen de los materiales, estos dictan un poco su construcción, pero
+                mis reflexiones lo llenan de un nuevo sentido.
+                El collage
                 se ha hecho presente en mi trabajo desde hace años, pienso que me permite expresar de manera
                 más
                 cercana
-                y fiel las imágenes que proyecto internamente, la complejidad y la extrañeza del uno mismo y
+                y fiel las imágenes fracturadas que proyecto internamente, la complejidad y la extrañeza del uno mismo y
                 lo
-                otro, e
-                igualmente la conexión que subyace para mí en toda la experiencia particular de vida desde
-                mi
-                feminidad
-                y humanidad. El dibujo también
+                otro, lo extraño. Mi propia encarnación de lo femenino es parte importante de cada pieza. El dibujo
+                también
                 ha pedido poco a poco mayor espacio e interactúa con el collage, lo complementa, lo
                 completa, se
                 opone a
-                él.
+                él en su materialidad y textura diversa.
 
 
 
@@ -199,28 +196,36 @@
 
             </div>
 
-            <iframe class="videoinfo" width="560" height="315" src="https://www.youtube.com/embed/4FGd9THXX1w"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+
+            <div class="ratio ratio-16x9">
+
+                <iframe class="videoinfo" width="560" height="315" src="https://www.youtube.com/embed/4FGd9THXX1w"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+
+
+            </div>
+
+
+
+
+
 
             <div class="p">
+
+                <h3>Lo femenino en mi obra</h3>
 
 
                 Como mujer, siempre tuve la sensación de tener que realizar ciertos rituales, pasajes y
                 tareas
-                específicas para proyectar una imagen ya escrita en un gran guión, un gran acuerdo social...
+                específicas para proyectar una imagen ya escrita en un gran guión, un rol repetido eternamente, el gran
+                acuerdo social...
                 ¿ Cómo
-                es ser niña y cómo podía ser mujer?... Y cómo debe ser el pasaje entre esta y aquella.
-                Cuando solo me preguntaba por Ser y lo que implicaba para mí esto me sentí increpada,
-                avergonzada y
-                asustada de sentirme distinta a lo que se esperaba de mí. Es así como pienso en los diversos
+                fue ser niña y cómo podía alguna vez ser mujer?... Es así como ejercito distintos aspectos de los
                 rituales y
-                ceremonias que cada sociedad y cada cultura en particular construye respecto a la identidad
-                de las
-                mujeres, como una cárcel. Y es que no hay una sola forma de ser mujer ni hay un número
-                limitado de roles
-                que debamos cumplir, no hay formularios que llenar.
+                ceremonias que la sociedad construye respecto a la identidad de las
+                mujeres, la cual se tranforma en cárcel.
 
 
             </div>
@@ -234,13 +239,10 @@
                 cuerpos y la forma en que deberíamos expresarnos, no puedo sino levantar mi mano y crear, mi
                 muy
                 personal
-                fuck you. Mi trabajo intenta expresar la indignación de sentirme atrapada por todos estos
-                parámetros sexistas que solo socavaron mi confianza y me dijeron que era menos. No, nunca
-                fui
-                menos mujer, fui yo, me construí y aprendí a leer que todo lo que intenté ser lo
-                construyeron para mí quienes nunca me conocieron, y sin embargo, siempre estuvieron
-                presentes
-                controlando nuestra identidad…
+                -fuck you-. Mi trabajo refleja la sensación de acorralamiento, trauma y estrés que dichos roles han
+                impuesto con sus
+                parámetros sexistas.
+                En el ejercicio visual busco construirme constantemente, romper límites, sanar.
 
 
 
