--- a/html-tienda-items/compra1.html
+++ b/html-tienda-items/compra1.html
@@ -121,10 +121,10 @@
 
     <div class="tiendatext animate__animated animate__zoomIn">
       <p>
-        The journey of the daughters
+        Título- The journey of the daughters
       </p>
 
-      <p> Dibujo intervenido digitalmente como collage. Impresión reproducción papel calidad museo.</p>
+      <p> Técnica- Dibujo intervenido digitalmente como collage. Impresión reproducción papel calidad museo.</p>
 
       <p>
         Tamaño A4
