--- a/html-tienda-items/compra3.html
+++ b/html-tienda-items/compra3.html
@@ -121,10 +121,10 @@
 
     <div class="tiendatext animate__animated animate__zoomIn">
       <p>
-        Casa de Hacienda
+        Título- Casa de Hacienda
       </p>
 
-      <p> Dibujo a lápiz sobre papel. Impresión reproducción papel calidad museo.</p>
+      <p> Técnica- Dibujo a lápiz sobre papel. Impresión reproducción papel calidad museo.</p>
 
       <p>
         Tamaño 15 x 15 cm
