--- a/html-tienda-items/compra4.html
+++ b/html-tienda-items/compra4.html
@@ -120,10 +120,10 @@
 
     <div class="tiendatext animate__animated animate__zoomIn">
       <p>
-        Virus
+        Título- Virus
       </p>
 
-      <p> Dibujo intervenido digitalmente como collage. Impresión reproducción papel calidad museo.</p>
+      <p> Técnica-  Dibujo intervenido digitalmente como collage. Impresión reproducción papel calidad museo.</p>
 
       <p>
         Tamaño A4
