--- a/html-tienda-items/compra6.html
+++ b/html-tienda-items/compra6.html
@@ -120,10 +120,10 @@
 
     <div class="tiendatext animate__animated animate__zoomIn">
       <p>
-        Factory
+        Título- Factory
       </p>
 
-      <p> Dibujo intervenido digitalmente como collage. Impresión reproducción papel calidad museo.</p>
+      <p> Técnico- Dibujo intervenido digitalmente como collage. Impresión reproducción papel calidad museo.</p>
 
       <p>
         Tamaño A4
