--- a/html-tienda-items/enconstruccionpage.html
+++ b/html-tienda-items/enconstruccionpage.html
@@ -58,11 +58,13 @@
 
 <body>
 
-  <div class="mensajecons" style="background-image: url('../pictures/imgconstrucc.JPG');">
+  <div class="mensajecons">
 
     <div class="color-overlay d-flex flex-column justify-content-center align-items-center">
-      <h1 class="enconstruccion">LO SIENTO, ESTAMOS EN CONTRUCCIÓN.</h1>
+      <h1 class="enconstruccion animate__animated animate__shakeX">LO SIENTO,
+        ESTAMOS EN CONTRUCCIÓN.</h1>
       <a href="../index.html">Regresar al Inicio</a>
     </div>
+  </div>
 
 </body>
