fix icons contacto

--- a/pagessection/contacto.html
+++ b/pagessection/contacto.html
@@ -52,7 +52,7 @@
 
     <title>Marie Obando | Contactarme</title>
 
-    <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
 
 
 </head>
@@ -259,7 +259,7 @@
                 <div class="col">
 
                     <a href="https://www.instagram.com/mariem_odoardi/" target="_blank">
-                        <img src="../icons/instaicon.png" class="img-fluid" alt="instaiconlogo">
+                        <img src="/icons/instaicon.png" class="img-fluid" alt="instaiconlogo">
 
                     </a>
 
@@ -268,7 +268,7 @@
 
 
                     <a href="https://www.facebook.com/MariemObando" target="_blank">
-                        <img src="../icons/facebookicon.png" class="img-fluid" alt="facebookicon">
+                        <img src="/icons/facebookicon.png" class="img-fluid" alt="facebookicon">
                     </a>
 
 
@@ -278,7 +278,7 @@
 
 
                     <a href="https://www.artstation.com/marielinaobando/profile" target="_blank">
-                        <img src="../icons/artsicon.png" class="img-fluid" alt="artstationicon">
+                        <img src="/icons/artsicon.png" class="img-fluid" alt="artstationicon">
                     </a>
 
                 </div>
