icons links fix tienda respons fix headers responsi fix contact color fix

--- a/html-tienda-items/compra1.html
+++ b/html-tienda-items/compra1.html
@@ -49,7 +49,7 @@
 
   <title>Marie Obando / Tienda</title>
 
-  <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
 
 
 </head>
@@ -105,7 +105,6 @@
   <section class="tienda-section">
 
 
-
     <div class="containerfototienda">
 
       <div class="animate__animated animate__backInLeft">
@@ -115,9 +114,8 @@
 
       </div>
 
-
-
     </div>
+
 
     <div class="tiendatext animate__animated animate__zoomIn">
       <p>
@@ -140,8 +138,6 @@
 
       </div>
 
-
-      
     </div>
 
 
