--- a/html-tienda-items/enconstruccionpage.html
+++ b/html-tienda-items/enconstruccionpage.html
@@ -51,7 +51,7 @@
 
   <title>Marie Obando / Tienda</title>
 
-  <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
 
 
 </head>
