--- a/pagessection/proyectos.html
+++ b/pagessection/proyectos.html
@@ -56,7 +56,7 @@
 
     <title>Marie Obando | Proyectos Obra</title>
 
-    <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../icon/favicon.ico" type="image/x-icon">
 
 
 </head>
@@ -187,7 +187,7 @@
                 <div class="col">
 
                     <a href="https://www.instagram.com/mariem_odoardi/" target="_blank">
-                        <img src="../icons/instaicon.png" class="img-fluid" alt="instaiconlogo">
+                        <img src="../icon/instaicon.png" class="img-fluid" alt="instaiconlogo">
 
                     </a>
 
@@ -196,7 +196,7 @@
 
 
                     <a href="https://www.facebook.com/MariemObando" target="_blank">
-                        <img src="../icons/facebookicon.png" class="img-fluid" alt="facebookicon">
+                        <img src="../icon/facebookicon.png" class="img-fluid" alt="facebookicon">
                     </a>
 
 
@@ -206,7 +206,7 @@
 
 
                     <a href="https://www.artstation.com/marielinaobando/profile" target="_blank">
-                        <img src="../icons/artsicon.png" class="img-fluid" alt="artstationicon">
+                        <img src="../icon/artsicon.png" class="img-fluid" alt="artstationicon">
                     </a>
 
                 </div>
