--- a/pagessection/tienda.html
+++ b/pagessection/tienda.html
@@ -54,7 +54,7 @@
 
   <title>Marie Obando | Tienda</title>
 
-  <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../icon/favicon.ico" type="image/x-icon">
 
 
 </head>
@@ -71,7 +71,7 @@
       <h1 class="animate__animated animate__fadeInRight">
 
 
-        <a href="index.html">MARIE OBANDO</a>
+        <a href="../index.html">MARIE OBANDO</a>
 
 
 
@@ -219,7 +219,7 @@
         <div class="col">
 
           <a href="https://www.instagram.com/mariem_odoardi/" target="_blank">
-            <img src="../icons/instaicon.png" class="img-fluid" alt="instaiconlogo">
+            <img src="../icon/instaicon.png" class="img-fluid" alt="instaiconlogo">
 
           </a>
 
@@ -228,7 +228,7 @@
 
 
           <a href="https://www.facebook.com/MariemObando" target="_blank">
-            <img src="../icons/facebookicon.png" class="img-fluid" alt="facebookicon">
+            <img src="../icon/facebookicon.png" class="img-fluid" alt="facebookicon">
           </a>
 
 
@@ -238,7 +238,7 @@
 
 
           <a href="https://www.artstation.com/marielinaobando/profile" target="_blank">
-            <img src="../icons/artsicon.png" class="img-fluid" alt="artstationicon">
+            <img src="../icon/artsicon.png" class="img-fluid" alt="artstationicon">
           </a>
 
         </div>
