--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <title>Marie Obando | Portfolio de Arte y proyectos</title>
 
-    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
 
 
 </head>
@@ -203,7 +203,7 @@
                 <div class="col">
 
                     <a href="https://www.instagram.com/mariem_odoardi/" target="_blank">
-                        <img src="icons/instaicon.png" class="img-fluid" alt="instaiconlogo">
+                        <img src="icon/instaicon.png" class="img-fluid" alt="instaiconlogo">
 
                     </a>
 
@@ -212,7 +212,7 @@
 
 
                     <a href="https://www.facebook.com/MariemObando" target="_blank">
-                        <img src="icons/facebookicon.png" class="img-fluid" alt="facebookicon">
+                        <img src="icon/facebookicon.png" class="img-fluid" alt="facebookicon">
                     </a>
 
 
@@ -222,7 +222,7 @@
 
 
                     <a href="https://www.artstation.com/marielinaobando/profile" target="_blank">
-                        <img src="icons/artsicon.png" class="img-fluid" alt="artstationicon">
+                        <img src="icon/artsicon.png" class="img-fluid" alt="artstationicon">
                     </a>
 
                 </div>
