--- a/item-galeria/obra3.html
+++ b/item-galeria/obra3.html
@@ -34,7 +34,7 @@
 
   <title>Marie Obando | </title>
 
-  <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../icon/favicon.ico" type="image/x-icon">
 
 
 </head>
