--- a/item-galeria/obra8.html
+++ b/item-galeria/obra8.html
@@ -34,7 +34,7 @@
 
   <title>Marie Obando | Obra</title>
 
-  <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../icon/favicon.ico" type="image/x-icon">
 
 
 </head>
