--- a/pagessection/info.html
+++ b/pagessection/info.html
@@ -51,7 +51,7 @@
 
     <title> Marie Obando | Info Bio </title>
 
-    <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../icon/favicon.ico" type="image/x-icon">
 
 
 </head>
@@ -299,7 +299,7 @@
                 <div class="col">
 
                     <a href="https://www.instagram.com/mariem_odoardi/" target="_blank">
-                        <img src="../icons/instaicon.png" class="img-fluid" alt="instaiconlogo">
+                        <img src="../icon/instaicon.png" class="img-fluid" alt="instaiconlogo">
 
                     </a>
 
@@ -308,7 +308,7 @@
 
 
                     <a href="https://www.facebook.com/MariemObando" target="_blank">
-                        <img src="../icons/facebookicon.png" class="img-fluid" alt="facebookicon">
+                        <img src="../icon/facebookicon.png" class="img-fluid" alt="facebookicon">
                     </a>
 
 
@@ -318,7 +318,7 @@
 
 
                     <a href="https://www.artstation.com/marielinaobando/profile" target="_blank">
-                        <img src="../icons/artsicon.png" class="img-fluid" alt="artstationicon">
+                        <img src="../icon/artsicon.png" class="img-fluid" alt="artstationicon">
                     </a>
 
                 </div>
