fiexs index contact

--- a/index.html
+++ b/index.html
@@ -113,12 +113,9 @@
 
     <section class="fotindex img-fluid">
 
-        <div>
-            <h2>ArTe
-
-            </h2>
-        </div>
+        <img src="pictures/indeximg.jpg" class="indeximagen animate__animated animate__zoomIn" alt="cover imagen de index">
         
+
     </section>
     
 
