info fixes mediaqueries link roto tienda

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <section class="fotindex img-fluid">
 
-        <img src="pictures/indeximg.jpg" class="indeximagen animate__animated animate__zoomIn" alt="cover imagen de index">
+        <img src="pictures/indeximg2.jpg" class="indeximagen animate__animated animate__zoomIn" alt="cover imagen de index">
         
 
     </section>
@@ -152,7 +152,7 @@
     <section>
         <div>
             <marquee bgcolor="#FFFFFF" width="100%" scrolldelay="1" scrollamount="8" direction="left" loop="infinite">
-                COLLAGE DIBUJO ILLUSTRACIÓN COLLAGE DIBUJO ILLUSTRACIÓN COLLAGE DIBUJO ILLUSTRACIÓN COLLAGE DIBUJO ILLUSTRACIÓN COLLAGE DIBUJO ILLUSTRACIÓN COLLAGE DIBUJO ILLUSTRACIÓN COLLAGE DIBUJO ILLUSTRACIÓN COLLAGE DIBUJO ILLUSTRACIÓN COLLAGE DIBUJO ILLUSTRACIÓN COLLAGE DIBUJO ILLUSTRACIÓN COLLAGE DIBUJO ILLUSTRACIÓN 
+                COLLAGE DIBUJO ILUSTRACIÓN COLLAGE DIBUJO ILUSTRACIÓN COLLAGE DIBUJO ILUSTRACIÓN COLLAGE DIBUJO ILUSTRACIÓN COLLAGE DIBUJO ILUSTRACIÓN COLLAGE DIBUJO ILUSTRACIÓN COLLAGE DIBUJO ILUSTRACIÓN COLLAGE DIBUJO ILUSTRACIÓN COLLAGE DIBUJO ILUSTRACIÓN COLLAGE DIBUJO ILUSTRACIÓN COLLAGE DIBUJO ILUSTRACIÓN 
 
             </marquee>
         </div>
