--- a/pagessection/info.html
+++ b/pagessection/info.html
@@ -142,7 +142,9 @@
             <p>
                 Marie también se dedica a ser Productora de videos animados 2d y novelas gráficas en idioma inglés para
                 FANTOONS Animation Studio basado en Los Angeles, California. Con ellos ha tenido la oportunidad de
-                producir videos animados para Frank Zappa, Bing Crosby, y material merch para bandas como Rush.
+                producir videos animados para <a href="https://www.youtube.com/watch?v=R5Q1yVLSR3I">Frank Zappa</a>, <a
+                    href="https://www.youtube.com/watch?v=UlCy_ZDK_k0">Bing Crosby</a> , y material merch para bandas
+                como <a href="https://www.fantoons.shop/categories/rush">Rush</a>.
             </p>
             <p>
                 Fuera de ello tiene un gran interes por los museos, los videojuegos, el género de horror en el cine y el
@@ -164,7 +166,7 @@
 
 
         <div id="statementtext" style="background-image: url(../pictures/imgstatement.png); ">
-            <div class="p">
+            <p>
 
 
 
@@ -191,10 +193,10 @@
                 él en su materialidad y textura diversa.
 
 
+            </p>
 
 
 
-            </div>
 
 
             <div class="ratio ratio-16x9">
@@ -212,9 +214,11 @@
 
 
 
-            <div class="p">
 
-                <h3>Lo femenino en mi obra</h3>
+
+            <h3>Lo femenino en mi obra</h3>
+
+            <p>
 
 
                 Como mujer, siempre tuve la sensación de tener que realizar ciertos rituales, pasajes y
@@ -227,11 +231,13 @@
                 ceremonias que la sociedad construye respecto a la identidad de las
                 mujeres, la cual se tranforma en cárcel.
 
+            </p>
 
-            </div>
 
 
-            <div class="p">
+            <p>
+
+
 
 
 
@@ -245,10 +251,10 @@
                 En el ejercicio visual busco construirme constantemente, romper límites, sanar.
 
 
+            </p>
 
 
 
-            </div>
 
         </div>
 
