mixin add, arreglos mixin info implemantacion responsive

--- a/pagessection/info.html
+++ b/pagessection/info.html
@@ -161,7 +161,7 @@
     <section class="statement">
 
 
-        <h2>Las ideas detrás de mis trabajos</h2>
+        <h2>Las ideas que conforman mis trabajos</h2>
 
 
 
@@ -208,11 +208,6 @@
 
 
             </div>
-
-
-
-
-
 
 
 
