--- a/pagessection/tienda.html
+++ b/pagessection/tienda.html
@@ -150,7 +150,7 @@
 
     </div>
 
-    <div class="tiendawrapimagenes d-flex flex-row justify-content-evenly p-4">
+    <div class="tiendawrapimagenesdos d-flex flex-row justify-content-evenly p-4">
 
       <div class="card" style="width: 18rem;">
 
