blank links info

--- a/pagessection/info.html
+++ b/pagessection/info.html
@@ -142,9 +142,9 @@
             <p>
                 Marie también se dedica a ser Productora de videos animados 2d y novelas gráficas en idioma inglés para
                 FANTOONS Animation Studio basado en Los Angeles, California. Con ellos ha tenido la oportunidad de
-                producir videos animados para <a href="https://www.youtube.com/watch?v=R5Q1yVLSR3I">Frank Zappa</a>, <a
-                    href="https://www.youtube.com/watch?v=UlCy_ZDK_k0">Bing Crosby</a> , y material merch para bandas
-                como <a href="https://www.fantoons.shop/categories/rush">Rush</a>.
+                producir videos animados para <a href="https://www.youtube.com/watch?v=R5Q1yVLSR3I" target="_blank">Frank Zappa</a>, <a
+                    href="https://www.youtube.com/watch?v=UlCy_ZDK_k0" target="_blank">Bing Crosby</a> , y material merch para bandas
+                como <a href="https://www.fantoons.shop/categories/rush" target="_blank">Rush</a>.
             </p>
             <p>
                 Fuera de ello tiene un gran interes por los museos, los videojuegos, el género de horror en el cine y el
