--- a/pagessection/contacto.html
+++ b/pagessection/contacto.html
@@ -179,7 +179,7 @@
                         <div class="md-form">
                             <textarea type="text" id="message" name="message" rows="2"
                                 class="form-control md-textarea"></textarea>
-                            <label for="message">MENSAJE</label>
+                            <label for="message">Mensaje</label>
                         </div>
 
                     </div>
@@ -201,11 +201,11 @@
 
 
                 <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                    <p class="dataform">PUEDES ENVIAR UN MENSAJE A + 11 23916016</p>
+                    <p class="dataform">Puedes enviarme un Whatsapp al + 11 23916016</p>
                 </li>
 
                 <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                    <p class="dataform">ESCRIBE A MI MAIL margyobando@hotmail.com</p>
+                    <p class="dataform">Puedes escribir un mail a margyobando@hotmail.com</p>
                 </li>
 
                 <li><i class="fas fa-envelope mt-4 fa-2x"></i>
