--- a/pagessection/info.html
+++ b/pagessection/info.html
@@ -131,7 +131,7 @@
         <div class="infotext animate__animated animate__zoomIn">
 
             <p class="mainline animate__animated animate__zoomIn">
-                Marie Obando, Licenciada en Artes y museologia de la Universidad Central de Venezuela, nacida en
+                Marie Obando, Licenciada en Artes y museología de la Universidad Central de Venezuela, nacida en
                 Caracas, Venezuela y residenciada en Argentina desde 2017.
             <p>
             <p>
@@ -147,7 +147,7 @@
                 como <a href="https://www.fantoons.shop/categories/rush" target="_blank">Rush</a>.
             </p>
             <p>
-                Fuera de ello tiene un gran interes por los museos, los videojuegos, el género de horror en el cine y el
+                Fuera de ello tiene un gran interés por los museos, los videojuegos, el género de horror en el cine y el
                 arte generativo producido a traves del creative coding y A.I..
             </p>
 
