--- a/html-tienda-items/enconstruccionpage.html
+++ b/html-tienda-items/enconstruccionpage.html
@@ -62,7 +62,7 @@
 
     <div class="color-overlay d-flex flex-column justify-content-center align-items-center">
       <h1 class="enconstruccion animate__animated animate__shakeX">LO SIENTO,
-        ESTAMOS EN CONTRUCCIÓN.</h1>
+        ESTAMOS EN CONSTRUCCIÓN.</h1>
       <a href="../index.html">Regresar al Inicio</a>
     </div>
   </div>
